[package]
name = "rabo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
chrono = "0.4"
rust_decimal = "1.19"
structopt = { version = "0.3", default-features = false }
rusty-money = { version = "0.4.0", features = ["iso"] }
human-sort = "0.2"
